# emelle

./: .gitlab-ci.yml  .gitmodules  HACKING.md  README.md  dune-workspace  emelle.opam  gitlab-sources.list
app/: dune  main.ml
docs/: pattern-match-compilation.md  typechecking.md
llvm/: codegen.ml  dune
src/: anf.ml  ast.ml  bytecode.ml  desugar.ml  dune  elab.ml  env.ml  ident.ml  kind.ml  lambda.ml  lexer.mll  literal.ml  lower.ml  message.ml  module.ml  package.ml  parser.mly  pattern.ml  pipeline.ml  prettyprint.ml  symtable.ml  term.ml  type.ml  typecheck.ml  typeconv.ml  util.ml
src/anf/: anf.ml  lower.ml  pattern.ml
src/bytecode/: bytecode.ml  bytecomp.ml
src/common/: message.ml  path.ml
src/desugar/: elab.ml  term.ml
src/driver/: pipeline.ml  prettyprint.ml
src/middle_end/: anf.ml  env.ml  lower.ml
src/regalloc/: color.ml  interf.ml  liveness.ml  post_ssa.ml  prealloc.ml
src/ssa/: ssa.ml  ssa_of_anf.ml
src/syntax/: ast.ml  dune  lexer.mll  parser.mly
src/typing/: lambda.ml  type.ml  typecheck.ml
test/: dune  test_env.ml  test_integration.ml  test_syntax.ml  test_type.ml  test_typecheck.ml
try/: dune  index.html  main.ml  stylesheet.css
